--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "prettier": "^2.8.7",
+    "sib-api-v3-sdk": "^8.5.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
