--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.0.3",
     "prettier": "^2.8.7",
     "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
